<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	>
<!--  Ancienne view..
<TextView  
    android:id="@+id/speed_text"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:gravity="center"
    android:text="@string/nope"
    android:textSize="20sp"
    />
-->

	<LinearLayout
	    android:layout_width="100dp"
	    android:layout_height="50dp"
	    android:orientation="vertical" >
            
            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:lines="1"
                android:text="@string/title_gps_maxspeed"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="8" >
                
                <TextView
                    android:id="@+id/gpsSpeedMax"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:maxLines="1"
                    android:text="@string/value_none"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
                
                <TextView
	            android:id="@+id/gpsSpeedUnit"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="bottom"
	            android:lines="1"
	            android:text="@string/unit_km_h"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>

	<LinearLayout
	    android:layout_width="100dp"
	    android:layout_height="50dp"
	    android:orientation="vertical" >
            
	    <TextView
	        android:id="@+id/textView6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="bottom"
	        android:lines="1"
	        android:text="@string/title_gps_speed"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:id="@+id/gpsSpeed"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:maxLines="1"
	            android:text="@string/value_none"
	            android:textAppearance="?android:attr/textAppearanceLarge" />

	        <TextView
	            android:id="@+id/gpsSpeedUnit2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="bottom"
	            android:lines="1"
	            android:text="@string/unit_km_h"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	    </LinearLayout>
	</LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:orientation="vertical" >
	    
            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:lines="1"
                android:text="@string/title_gps_acc"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="8" >
	        
                <TextView
                    android:id="@+id/gpsAccuracy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/value_none"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
                
                <TextView
                    android:id="@+id/gpsAccuracyUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:lines="1"
                    android:text="@string/unit_meter"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:lines="1"
                android:text="@string/title_gps_sats"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <TextView
                android:id="@+id/gpsSats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/value_none"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

</LinearLayout>